--- a/start2/frase.css
+++ b/start2/frase.css
@@ -8,3 +8,47 @@
 7 ritardare progressivamente l'animazione delle altre 2 parole 
 */
 
+
+#testoAlternato {
+    margin: 20px;
+    border: 2px solid black;
+    font-weight: 800;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 15px;
+    width: 400px;
+}
+
+.parole i {
+    color: rgb(32, 32, 255);
+    opacity: 0;
+
+    position: relative;
+}
+
+.parole i:nth-child(1) {
+    animation: parole 2s;
+}
+
+.parole i:nth-child(2) {
+    animation: parole 2s;
+    animation-delay: 2s;
+    bottom: 16px;
+    left: 230px;
+}
+
+.parole i:nth-child(3) {
+    animation: parole 2s;
+    animation-delay: 4s;
+    bottom: 16px;
+    left: 90px;
+}
+
+
+
+@keyframes parole {
+
+    100% {
+        visibility: visible;
+        opacity: 1;
+    }
+}
