--- a/start2/frase.css
+++ b/start2/frase.css
@@ -20,9 +20,9 @@
 
 .parole i {
     color: rgb(32, 32, 255);
+    visibility: hidden;
     opacity: 0;
-
-    position: relative;
+    position: absolute;
 }
 
 .parole i:nth-child(1) {
@@ -32,22 +32,21 @@
 .parole i:nth-child(2) {
     animation: parole 2s;
     animation-delay: 2s;
-    bottom: 16px;
-    left: 230px;
 }
 
 .parole i:nth-child(3) {
     animation: parole 2s;
     animation-delay: 4s;
-    bottom: 16px;
-    left: 90px;
 }
 
 
-
 @keyframes parole {
+    0% {
+        transform: translateY(-8px)
+    }
 
     100% {
+        transform: translateY(0px);
         visibility: visible;
         opacity: 1;
     }
